network/nginx-deployments.yaml
# deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-a
  namespace: namespace-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-a
  template:
    metadata:
      labels:
        app: nginx-a
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
  namespace: namespace-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-b
  template:
    metadata:
      labels:
        app: nginx-b
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-c
  namespace: namespace-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-c
  template:
    metadata:
      labels:
        app: nginx-c
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
